# LandProcessor

./: CMakeLists.txt  LICENSE.md  LandProcessor.cpp  LandProcessor.hpp  README.md
doc/: CMakeLists.txt  HTML-Doxyfile.in  mainpage.dox
src/: CMakeLists.txt  Helpers.cpp  Helpers.hpp  LandProcessor.cpp  LandProcessor.hpp
src/LandProcessor/: ArealEntitiesProcessing.cpp  ArealEntitiesProcessing.hpp  CMakeLists.txt  Helpers.hpp  LandProcessor.cpp  LandProcessor.hpp  LinearEntitiesProcessing.cpp  LinearEntitiesProcessing.hpp  RasterProcessing.cpp  RasterProcessing.hpp  VectorProcessing.cpp  VectorProcessing.hpp  VectorRegrouping.cpp  VectorRegrouping.hpp
src/openfluid-simulators/: CMakeLists.txt
src/openfluid-simulators/landprocessor.preparation-stage/: CMake.in.config  PreparationSim.cpp
src/openfluid-simulators/landprocessor.scenario-stage/: CMake.in.config  ScenarioSim.cpp
tests/: CMakeLists.txt  LandscapeSegmentation.cpp  ScenarioTesting.cpp  TestHelpers.hpp  test0.cpp  tests-config.hpp.in
tests/dataset/input/raster/: dem.tif
tests/dataset/input/vector/: plots.dbf
tests/datasets/: DardaillonSmallProject.qlr
tests/openfluid/: CMakeLists.txt
tests/openfluid/datasets/Full/: model.fluidx  monitoring.fluidx
tests/openfluid/datasets/Full/gisdata-input/vector/: plots.dbf
tests/openfluid/datasets/FullWithParam/: model.fluidx  run.fluidx
tests/openfluid/simulators/: CMakeLists.txt
tests/openfluid/simulators/tests.preprocess-stage/: CMake.in.config  PreprocessSim.cpp
tests/openfluid/simulators/tests.scenario-stage/: CMake.in.config  ScenarioSim.cpp
tests/standalone/: CMakeLists.txt  Full.cpp  FullWithParam.cpp  Preparation.cpp  Preprocess.cpp  Scenario.cpp  TestHelpers.hpp  tests-config.hpp.in
tests/standalone/datasets/: DardaillonSmallProject.qgs
tests/standalone/datasets/DardaillonSmall/vector/: plots.dbf
tests/standalone/datasets/DardaillonSmallWithParam/vector/: plots.dbf
tests/standalone/references/DardaillonSmall/: ARL.dbf  ARL.shp  ARL.shx  LI.shx  LNR.dbf  LNR.shp  RS.dbf  SRF.dbf  SU.dbf  SU.shp
tests/standalone/references/DardaillonSmallWithParam/: LI.dbf  RS.shp  RS.shx  SU.dbf  SU.shx
