

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

PROJECT(LandProcessor CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
FIND_PACKAGE(GDAL)
FIND_PACKAGE(OpenFLUID COMPONENTS core base tools utils)
FIND_PACKAGE(OpenFLUIDHelpers)
OPENFLUID_FIND_QT()
 
 
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${OpenFLUID_INCLUDE_DIRS} ${GDAL_INCLUDE_DIRS} ${QT_INCLUDES})
 
ADD_EXECUTABLE(test0 tests/test0.cpp LandProcessor.cpp LandProcessor.hpp)

TARGET_LINK_LIBRARIES(test0 ${OpenFLUID_LIBRARIES} ${GDAL_LIBRARIES} ${QT_QTCORE_LIBRARIES})

ENABLE_TESTING()

ADD_TEST(test0 test0 "${CMAKE_CURRENT_SOURCE_DIR}/tests/dataset/input" "${CMAKE_BINARY_DIR}/tests-output/test0/output")
