
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

PROJECT(LandProcessor CXX)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")

FIND_PACKAGE(GDAL)
FIND_PACKAGE(OpenFLUID COMPONENTS core base tools utils)
FIND_PACKAGE(OpenFLUIDHelpers)
FIND_PACKAGE(GEOS REQUIRED)
OPENFLUID_DETECT_CXX11()
OPENFLUID_FIND_QT()

 
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src ${OpenFLUID_INCLUDE_DIRS} ${GDAL_INCLUDE_DIRS} ${QT_INCLUDES} ${GEOS_INCLUDE_DIR})
LINK_DIRECTORIES(${GDAL_LIBRARY_DIRS} ${GEOS_LIBRARY_DIR})

ENABLE_TESTING()
 
ADD_SUBDIRECTORY(src) 
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(doc)
